# simple-space

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  LICENSE  README.md  debug.sh  main.cpp  make.sh  make_debug.sh  run.sh  test.sh
data/: camera.aseprite  logo.aseprite  startingGame.json
data/definitions/: characters.json  compendium.json  cursors.json  dialogue-audio.json  dialogues.json  items.json  misc.json  planet-grassy-1.json  planet-sandy-1.json  planets.json  shaders.json  ships.json  star-system-1.json  star-system-2.json  star-system-3.json  starSystem1.json
data/items/: apple.aseprite  chair.aseprite  nest.aseprite  teleporter.aseprite
data/maps/: OutdoorAdventurer.tsx  SpaceDoggoGrassDirt.tsx  planet1-2.tmx  planet1.tmx  planet2.tmx  test.tmx
data/shaders/: particles.frag  particles.vert  planet.frag  planet.vert  portal_particle.frag  portal_particle.vert  simple.frag  simple.vert  stars.frag  stars.vert  stars2.frag  stars2.vert
data/textures/: grassMask1.aseprite  grassMask2.aseprite  starPortal.aseprite  testPanel2.aseprite  thoughtBubble.aseprite  tree1.aseprite
src/: PerlinNoise.hpp  animated_sprite.cpp  animated_sprite.hpp  base_game_scene.hpp  camera.cpp  camera.hpp  circular_index.hpp  compendium.cpp  compendium.hpp  definition_manager.cpp  definition_manager.hpp  dialogue_manager.cpp  dialogue_manager.hpp  earcut.hpp  editor_game_session.cpp  editor_game_session.hpp  engine.cpp  engine.hpp  fastrand.hpp  font_manager.cpp  font_manager.hpp  game_scene_manager.cpp  game_scene_manager.hpp  game_session.cpp  game_session.hpp  game_session_render.hpp  keyboard.cpp  keyboard.hpp  layer_camera.cpp  layer_camera.hpp  limited_object_pool.hpp  line.hpp  line.inl  main_menu_scene.cpp  main_menu_scene.hpp  map-layer.hpp  map_layer.cpp  map_layer.hpp  mouse.cpp  mouse.hpp  (+39 more)
src/controllers/: bird_controller.cpp  bird_controller.hpp  character_controller.cpp  character_controller.hpp  npc_controller.cpp  npc_controller.hpp  npc_needs.cpp  npc_needs.hpp  player_controller.cpp  player_controller.hpp  space_station_controller.cpp  space_station_controller.hpp
src/debug/: draw_debug.cpp  draw_debug.hpp
src/definitions/: animated_texture.cpp  animated_texture.hpp  base_definition.cpp  base_definition.hpp  celestial_body_definition.cpp  celestial_body_definition.hpp  character_definition.cpp  character_definition.hpp  compendium_definition.cpp  compendium_definition.hpp  cursor.cpp  cursor.hpp  dialogue.hpp  dialogue_audio.cpp  dialogue_audio.hpp  grass_effect_definition.cpp  grass_effect_definition.hpp  item_definition.cpp  item_definition.hpp  placeable_item_definition.hpp  planet_definition.cpp  planet_definition.hpp  planet_surface_definition.cpp  planet_surface_definition.hpp  shader_definition.cpp  shader_definition.hpp  ship_definition.cpp  ship_definition.hpp  space_portal_definition.cpp  space_portal_definition.hpp  star_background_options.cpp  star_background_options.hpp  star_system_definition.cpp  star_system_definition.hpp
src/editor/: editor_camera_target.cpp  editor_camera_target.hpp
src/effects/: bloom-effect-2.cpp  bloom-effect-2.hpp  bloom-effect.cpp  bloom-effect.hpp  bloom_effect.cpp  bloom_effect.hpp  bloom_effect_2.cpp  bloom_effect_2.hpp  engine_flame_effect.cpp  engine_flame_effect.hpp  grass_effect.cpp  grass_effect.hpp  overlay.cpp  overlay.hpp  portal_effect.cpp  portal_effect.hpp  portal_shadow.cpp  portal_shadow.hpp  post-effect.cpp  post-effect.hpp  post_effect.cpp  teleport_screen_effect.cpp  teleport_screen_effect.hpp  texture_overlay.cpp  texture_overlay.hpp  transition.cpp  transition.hpp
src/embeddedData/: font.h
src/game/: area.cpp  area.hpp  area_instances.cpp  area_instances.hpp  area_quadtree.cpp  area_quadtree.hpp  (+41 more)
src/game-ui/: game-ui-dialogue.cpp  game-ui-dialogue.hpp  game-ui-interactable.cpp  game-ui-interactable.hpp  game-ui-interactables-panel.cpp  game-ui-interactables-panel.hpp  game-ui-interactables-window.cpp  game-ui-interactables-window.hpp  game-ui-inventory-item.cpp  game-ui-inventory-item.hpp  game-ui-inventory-window.cpp  game-ui-inventory-window.hpp  game-ui-inventory.cpp  game-ui-inventory.hpp  game-ui-manager.cpp  game-ui-manager.hpp  game-ui-teleporter.cpp  game-ui-teleporter.hpp  game-ui-teleporters-panel.cpp  game-ui-teleporters-panel.hpp  game-ui-window.cpp  game-ui-window.hpp  game_ui_dialogue.cpp  game_ui_dialogue.hpp  game_ui_interactable.cpp  game_ui_interactable.hpp  game_ui_interactables_panel.cpp  game_ui_interactables_panel.hpp  game_ui_inventory_item.cpp  game_ui_inventory_item.hpp  game_ui_inventory_window.cpp  game_ui_inventory_window.hpp  game_ui_manager.cpp  game_ui_manager.hpp  game_ui_teleporter.cpp  game_ui_teleporter.hpp  game_ui_teleporters_panel.cpp  game_ui_teleporters_panel.hpp  game_ui_window.cpp  game_ui_window.hpp  (+28 more)
tests/: main.cpp
(+139 files in other folders)
